tests/snapshots/examples_fixtures/errors__multiple_errors.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/multiple_errors.flx
== compile ==
failed (parse)
== diagnostics ==
error[E076]: Missing Closing Delimiter

Expected a closing `)` to match this opening `(`.

  examples/errors/multiple_errors.flx:9:6
  |
9 | print("test"
  |      ^

note: Expected `)` before this token.
  examples/errors/multiple_errors.flx:10:1
   |
== stdout ==
<not executed>
